tests/should_fail/logic_alias/signature_mismatch_params.stderr
error[E0308]: arguments to this function are incorrect
  --> signature_mismatch_params.rs:10:15
   |
10 | #[logic_alias(is_greater_logic)]
   |               ^^^^^^^^^^^^^^^^
11 | pub fn is_greater(x: i64, y: i64) -> bool {
   |                   -       - expected `Int`, found `i64`
   |                   |
   |                   expected `Int`, found `i64`
   |
note: function defined here
  --> signature_mismatch_params.rs:6:8
   |
 6 | pub fn is_greater_logic(a: Int, b: Int) -> bool {
   |        ^^^^^^^^^^^^^^^^ ------  ------

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
